# ConversaoDeBasesEmC

./: .gitignore  CMakeLists.txt  main.c
arquivos/: ajuda.txt  dadosPessoa.txt  helpEnvioDeEmails.txt  log.txt  trabalho.txt
logger/: logger.h
structs/: pessoa.h
util/: ajuda.h  binario.h  converteBinParaBase.h  converteParaBinario.h  decimal.h  enviaEmail.h  enviaemail.h  hexadecimal.h  mediador.h  menu.h  octal.h  redireciona.h  utilitarios.h
